# NKL

./: .gitignore  ANPU.lean  BIRMain.lean  Export.lean  KLR.lean  Main.lean  NKL.lean  README.md  lake-manifest.json  lakefile.lean  lean-toolchain
.github/workflows/: ci.yml
ANPU/: Basic.lean
KLR/: BIR.lean  Core.lean  FFI.lean  Python.lean  Trace.lean  Util.lean
KLR/BIR/: Compile.lean  Function.lean  Instruction.lean  Instructions.lean
KLR/BIR/Compile/: Kernel.lean  Memory.lean  Types.lean
KLR/Core/: Basic.lean  Encode.lean  FromToJson.lean  Oper.lean  Pretty.lean
KLR/Trace/: Basic.lean  Builtin.lean  NKI.lean  Numpy.lean  Python.lean  Tensor.lean  Types.lean
NKL/: Encode.lean  FFI.lean  KLR.lean  NKI.lean  Oper.lean  PrettyPrint.lean  Python.lean  Trace.lean  Util.lean
NKL/KLR/: Basic.lean  Encode.lean  Pretty.lean
NKL/Trace/: Basic.lean  Builtin.lean  NKI.lean  Python.lean  Tensor.lean  Types.lean
interop/: MANIFEST.in  README.md  mk.sh  noop.c  pyproject.toml  requirements.txt  test.sh
interop/examples/: average_pool.py  getting_started.py  layernorm.py  layout.py  matmul.py  rmsnorm.py  transpose2d.py
interop/klr/: __init__.py  parser.py
interop/nki/: __init__.py
interop/nki/isa/: __init__.py
interop/nki/language/: __init__.py
interop/nkl/: __init__.py  lean.py  lean_rffi.c  loader.py  parser.py
interop/test/: test_basic.py  test_examples.py  test_json.py  test_nki_isa_tensor_scalar.py
interop/test/examples/: __init__.py  fused_mamba.py  getting_started.py  index.py  mm.py  prof.py  sd_attention.py
python/: lean.py  lean_rffi.c  mk.sh  test.py  test.sh
